# kubemap

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
k8s_reporter/: __init__.py  cli.py  collector.py  config.py  formatters.py  kube_client.py  resources.py
tests/: test_resources.py
