[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "k8s-deployment-reporter"
version     = "1.0.0"
description = "Scan a Kubernetes cluster and generate namespace-segregated deployment reports"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "kubernetes>=28.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
k8s-reporter = "k8s_reporter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["k8s_reporter*"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["k8s_reporter"]
omit   = ["tests/*"]
